SO-4446: Update JVM launch arguments
- Remove references to CMS collector
- Remove unsupported AlwaysLockClassLoader option
- Add --add-opens options for base modules java.lang.reflect, java.lang,
java.util, java.time